[package]
name = "mops"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jyrama/mops"
documentation = "https://github.com/jyrama/mops"
repository = "https://github.com/jyrama/mops"
readme = "README.md"
description = "Mmmm.... a bit like sops but in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
