[package]
name = "mops"
version = "0.1.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/jyrama/mops"
documentation = "https://github.com/jyrama/mops"
repository = "https://github.com/jyrama/mops"
readme = "README.md"
description = "Mmmm.... a bit like sops but in Rust"
exclude = [
    "priv/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = "1"
serde_json = "1"
azure_identity = "0.11"
azure_security_keyvault = "0.11"
base64 = "0.21"
aes-gcm = "0.10"
regex = "1"
typenum = "1"
aes = "0.8"
